# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
page_loader/: __init__.py  cli.py  downloader.py  html.py  url.py
page_loader/scripts/: page_loader.py
tests/: __init__.py  test_download.py
tests/fixtures/: expected1.html  fixture.css  fixture.js  fixture1.html  image_path.txt  image_url.txt
