[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Feoktistov Andrei"]
readme = "README.md"
packages = [{include = "page_loader"}]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
progress = "^1.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
pytest = "^7.1.3"
requests-mock = "^1.10.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
